[package]
name = "ledger-nano-piv"
version = "0.1.0"
authors = ["yhql", "Alexandre Iooss"]
edition = "2021"

[dependencies]
heapless = "0.7.15"
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk/", branch = "ccid" }
uuid = { version = "1.1.2", default-features = false, features = ["v5"] }

[profile.release]
opt-level = "z"
lto = true

[package.metadata.nanos]
curve = "secp256k1"
flags = "0"
icon = "piv.gif"
path = "m/5261654'"
