[package]
name = "ledger-nano-piv"
version = "0.1.0"
authors = ["yhql", "Alexandre Iooss", "Nics"]
edition = "2021"

[dependencies]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk/", branch = "ccid" }
tinyvec = "1.6.0"
uuid = { version = "1.1.2", default-features = false, features = ["v5"] }

[profile.release]
opt-level = "z"
lto = true

[package.metadata.nanos]
curve = "secp256r1"
flags = "0"
icon = "piv.gif"
path = "m/5261654'"
